--- a/main.html
+++ b/main.html
@@ -4,10 +4,74 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center;">HTML Assignment #3</h1>
+	<!-- table 1 -->
+	<table class="middle" id="table-1">
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13" class="right">right</td>
+		</tr>
+		<tr class="center">
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+	</table>
+	<!-- table 2-->
+	<table class="middle" id="table-2">
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+		<tr>
+			<td rowspan=4></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td rowspan="2" colspan="3"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td colspan="6"></td>
+		</tr>
+	</table>
+	<table class="middle" id="table-3">
+		<tr>
+			<td id="bg-green"></td>
+		</tr>
+		<tr>
+			<td id="t-image"><img id="img-center" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
+		</tr>
+		<tr>
+			<td id="bg-blue"></td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
