--- a/main.html
+++ b/main.html
@@ -14,24 +14,24 @@
 	<table class="middle" id="table-1">
 		<tr>
 			<td id="t11">left</td>
-			<td id="t12">center</td>
+			<td id="t12" class="center">center</td>
 			<td id="t13" class="right">right</td>
 		</tr>
-		<tr class="center">
+		<tr>
 			<td>left</td>
-			<td>center</td>
+			<td class="center">center</td>
 			<td class="right">right</td>
 		</tr>
 		<tr>
 			<td>left</td>
-			<td>center</td>
+			<td class="center">center</td>
 			<td class="right">right</td>
 		</tr>
 	</table>
 	<!-- table 2-->
 	<table class="middle" id="table-2">
 		<tr>
-			<td colspan="6"></td>
+			<td colspan="6" id="t21"></td>
 		</tr>
 		<tr>
 			<td rowspan=4></td>
@@ -63,13 +63,13 @@
 	</table>
 	<table class="middle" id="table-3">
 		<tr>
-			<td id="bg-green"></td>
+			<td class="bg-green"></td>
 		</tr>
 		<tr>
 			<td id="t-image"><img id="img-center" src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg"></td>
 		</tr>
 		<tr>
-			<td id="bg-blue"></td>
+			<td class="bg-blue"></td>
 		</tr>
 	</table>
     <script type="text/javascript" src="./script.js">
